Fix reset button display on smaller screen
Specify smaller screen button formatting for black and rgb
buttons, not reset button.

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ button:active {
     h1 {
         font-size: 3vw;
     }
-    button {
+    .black-button,.rgb-button {
         height: 70px;
         width: 70px;
         border-radius: 50%;
